--- a/src/app/about/about.module.css
+++ b/src/app/about/about.module.css
@@ -1,4 +1,4 @@
-.home {
+.about {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -9,16 +9,16 @@
   background-size: 400% 400%;
 }
 
-.home-content {
+.about-content {
   width: 525px;
 }
 
-.home-content p {
+.about-content p {
   margin-top: 20px;
   line-height: 1.2;
 }
 
-.home-content a {
+.about-content a {
   margin-top: 20px;
   padding: 10px 20px;
 }
